--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h2{color:blue;}
+        </style>
 </head>
 <body>
-    <h2 style="color:red;"></h2>
+    <h2 style="color:red;">hello</h2>
+        <h2>h1</h2>
 </body>
 </html>
