--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Document</title>
     <style>
         h2{color:blue;}
+       .red-text{
+           color: red;
+        }
+
         </style>
 </head>
 <body>
     <h2 style="color:red;">hello</h2>
+    <!--task2-->
         <h2>h1</h2>
+    <!--task3-->
+    <h2 class="red-text"></h2>    
 </body>
 </html>
