--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <!--task2-->
         <h2>h1</h2>
     <!--task3-->
-    <h2 class="red-text"></h2>    
+    <h2 class="red-text">head</h2>  
+    <!--task4-->
+    <h2 class="red-text">hey</h2>
+    <p class="red-text">good morning</p>
+    <p>good eve</p>
+    <p>good night</p>  
 </body>
 </html>
