--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
        .red-text{
            color: red;
         }
+        p{
+          font-size:16px;
+    
+        }
 
         </style>
 </head>
@@ -22,7 +26,9 @@
     <!--task4-->
     <h2 class="red-text">hey</h2>
     <p class="red-text">good morning</p>
-    <p>good eve</p>
-    <p>good night</p>  
+    <p class="blue">good eve</p>
+    <p class="blue">good night</p>  
+    <!--task5-->
+    <p>task5</p>
 </body>
 </html>
