--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         }
         p{
           font-size:16px;
+          font-family: monospace;
     
         }
 
@@ -30,5 +31,7 @@
     <p class="blue">good night</p>  
     <!--task5-->
     <p>task5</p>
+    <!--task6-->
+    <p>Click here to view more</p>
 </body>
 </html>
