--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <title>Document</title>
     <style>
         h2{color:blue;}
@@ -15,6 +16,13 @@
           font-family: monospace;
     
         }
+        h2{
+  
+  font-family: Lobster;
+}
+p{
+  font-family:monospace;
+}
 
         </style>
 </head>
@@ -33,5 +41,8 @@
     <p>task5</p>
     <!--task6-->
     <p>Click here to view more</p>
+    <!--task7-->
+    <h2>CatPhotoApp</h2>
+    <p>Click here to view more </p>
 </body>
 </html>
