--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 p{
   font-family:monospace;
 }
+h2 {
+    font-family: Lobster, monospace;
+  }
+
 
         </style>
 </head>
@@ -44,5 +48,7 @@ p{
     <!--task7-->
     <h2>CatPhotoApp</h2>
     <p>Click here to view more </p>
+    <!--task8-->
+    <h2 class="red-text">CatPhotoApp</h2>
 </body>
 </html>
