--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ p{
 h2 {
     font-family: Lobster, monospace;
   }
-
+  .smaller-image{
+   width: 100px;
+ }
 
         </style>
 </head>
@@ -50,5 +52,7 @@ h2 {
     <p>Click here to view more </p>
     <!--task8-->
     <h2 class="red-text">CatPhotoApp</h2>
+    <!--task9-->
+    <img class="smaller-image" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
 </body>
 </html>
