--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ h2 {
   .smaller-image{
    width: 100px;
  }
+ .thick-green-border {
+  
+  border-width: 10px;
+  border-style: solid;
+  border-color: green;
+  }
 
         </style>
 </head>
@@ -54,5 +60,8 @@ h2 {
     <h2 class="red-text">CatPhotoApp</h2>
     <!--task9-->
     <img class="smaller-image" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
+    <!--task10-->
+    <img class="smaller-image thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
 </body>
+
 </html>
