--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ h2 {
   border-width: 10px;
   border-style: solid;
   border-color: green;
+  /*task11*/
+  border-radius:10px;
+  }
   }
 
         </style>
