task12 border-radiusis 50%

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@ h2 {
   
   border-width: 10px;
   border-style: solid;
+
   border-color: green;
   /*task11*/
-  border-radius:10px;
+  /*border-radius:10px;*/
+  border-radius: 50%;
   }
-  }
+  
 
         </style>
 </head>
