--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@ h2 {
   /*border-radius:10px;*/
   border-radius: 50%;
   }
+  .silver-background {
+  background-color: silver;
+}
   
 
         </style>
@@ -67,6 +70,27 @@ h2 {
     <img class="smaller-image" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
     <!--task10-->
     <img class="smaller-image thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
+   <!--task13-->
+
+  <div class="silver-background">
+    <p>Things cats love:</p>
+    <ul>
+      <li>cat nip</li>
+      <li>laser pointers</li>
+      <li>lasagna</li>
+    </ul>
+    <p>Top 3 things cats hate:</p>
+    <ol>
+      <li>flea treatment</li>
+      <li>thunder</li>
+      <li>other cats</li>
+    </ol>
+  </div>
+
+
+
+
+
 </body>
 
 </html>
