task15 Use an id Attribute to Style an Element

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@ h2 {
   .silver-background {
   background-color: silver;
 }
-  
+ /*task15 */
+#cat-photo-form{
+    background-color:green;
+  }
 
         </style>
 </head>
