task16 Adjust the Padding of an Element

--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@ h2 {
  /*task15 */
 #cat-photo-form{
     background-color:green;
+  } 
+  /*Adjust the Padding of an Element */
+  .blue-box {
+    background-color: blue;
+    color: #fff;
+    padding: 20px;
   }
-
         </style>
 </head>
 <body>
