--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@ h2 {
 #cat-photo-form{
     background-color:green;
   } 
-  /*Adjust the Padding of an Element */
+  /*task16 */
   .blue-box {
     background-color: blue;
     color: #fff;
     padding: 20px;
+    /*task17 */
+    margin: 20px;
   }
         </style>
 </head>
