task18 Add a Negative Margin to an Element

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ h2 {
     color: #fff;
     padding: 20px;
     /*task17 */
-    margin: 20px;
+    /*margin: 20px;*/
+    /*task18*/
+    margin: -15px;
   }
         </style>
 </head>
