task19 Add Different Padding to Each Side of an Element

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@ h2 {
   .blue-box {
     background-color: blue;
     color: #fff;
-    padding: 20px;
+   /* padding: 20px; */
     /*task17 */
     /*margin: 20px;*/
     /*task18*/
     margin: -15px;
+    padding-top:40px;
+    padding-right:20px;
+    padding-left:40px;
+    padding-bottom:20px;
   }
         </style>
 </head>
