task20 Add Different Margins to Each Side of an Element

--- a/index.html
+++ b/index.html
@@ -54,11 +54,16 @@ h2 {
     /*task17 */
     /*margin: 20px;*/
     /*task18*/
-    margin: -15px;
+    /*margin: -15px; */
     padding-top:40px;
     padding-right:20px;
     padding-left:40px;
     padding-bottom:20px;
+    /*task20*/
+    margin-top: 40px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
   }
         </style>
 </head>
