--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@ h2 {
     /*margin: 20px;*/
     /*task18*/
     /*margin: -15px; */
+    /*
     padding-top:40px;
     padding-right:20px;
     padding-left:40px;
-    padding-bottom:20px;
+    padding-bottom:20px;8/
     /*task20*/
     margin-top: 40px;
     margin-right: 20px;
     margin-bottom: 20px;
     margin-left: 40px;
+    /*task21*/
+    padding: 40px 20px 20px 40px;
   }
         </style>
 </head>
