--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@ h2 {
     padding-right:20px;
     padding-left:40px;
     padding-bottom:20px;8/
-    /*task20*/
+    /*task20
     margin-top: 40px;
     margin-right: 20px;
     margin-bottom: 20px;
-    margin-left: 40px;
+    margin-left: 40px;*
     /*task21*/
     padding: 40px 20px 20px 40px;
+    /*task22*/
+    margin: 40px 20px 20px 40px;
   }
         </style>
 </head>
