--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@ h2 {
     /*task22*/
     margin: 40px 20px 20px 40px;
   }
+  /*task23*/
+  [type='checkbox'] {
+  margin-top:10px;
+  margin-bottom:15px;
+}
         </style>
 </head>
 <body>
