task24 Understand Absolute versus Relative Units

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         h2{color:blue;}
        .red-text{
            color: red;
+           /*task24*/
+           padding:1.5em;
         }
         p{
           font-size:16px;
@@ -75,7 +77,8 @@ h2 {
   margin-top:10px;
   margin-bottom:15px;
 }
-        </style>
+
+</style>
 </head>
 <body>
     <h2 style="color:red;">hello</h2>
