--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <title>Document</title>
     <style>
+      /*task25*/
+      body{
+            background-color:black;
+      }
         h2{color:blue;}
        .red-text{
            color: red;
