task26 Inherit Styles from the Body Element

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       /*task25*/
       body{
             background-color:black;
+            font-family:monospace;
+             color:green;
       }
         h2{color:blue;}
        .red-text{
@@ -134,7 +136,8 @@ h2 {
     <input type="text" placeholder="cat photo URL" required>
     <button type="submit">Submit</button>
   </form>
-
+  <!--task26-->
+  <h1>Hello World</h1>
 
 
 
