task27 Prioritize One Style Over Another

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ h2 {
     /*task17 */
     /*margin: 20px;*/
     /*task18*/
-    /*margin: -15px; */
+    /*margin: -15px; */<h1 class="pink-text">Hello World!</h1>
     /*
     padding-top:40px;
     padding-right:20px;
@@ -83,6 +83,9 @@ h2 {
   margin-top:10px;
   margin-bottom:15px;
 }
+.pink-text{
+    color:pink;
+  }
 
 </style>
 </head>
@@ -138,6 +141,8 @@ h2 {
   </form>
   <!--task26-->
   <h1>Hello World</h1>
+  <!--task27-->
+  <h1 class="pink-text">Hello World!</h1>
 
 
 
