task28 Override Class Declarations by Styling ID Attributes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ h2 {
   margin-bottom:15px;
 }
 .pink-text{
-    color:pink;
+    color:blue;
   }
 
 </style>
@@ -142,7 +142,8 @@ h2 {
   <!--task26-->
   <h1>Hello World</h1>
   <!--task27-->
-  <h1 class="pink-text">Hello World!</h1>
+  <!--task28-->
+  <h1 class="pink-text blue-text">Hello World!</h1>
 
 
 
