task28 Override Class Declarations by Styling ID Attribute

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ h2 {
     /*task17 */
     /*margin: 20px;*/
     /*task18*/
-    /*margin: -15px; */<h1 class="pink-text">Hello World!</h1>
+    /*margin: -15px; */
     /*
     padding-top:40px;
     padding-right:20px;
@@ -142,7 +142,7 @@ h2 {
   <!--task26-->
   <h1>Hello World</h1>
   <!--task27-->
-  <!--task28-->
+  
   <h1 class="pink-text blue-text">Hello World!</h1>
 
 
