--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ h2 {
 .pink-text{
     color:blue;
   }
+  #orange-text{
+    color:orange;
+  }
 
 </style>
 </head>
@@ -142,8 +145,9 @@ h2 {
   <!--task26-->
   <h1>Hello World</h1>
   <!--task27-->
-  
-  <h1 class="pink-text blue-text">Hello World!</h1>
+  <!--task28-->
+  <!--task29-->
+  <h1 class="pink-text blue-text" id="orange-text">Hello World!</h1>
 
 
 
