task30 Override Class Declarations with Inline Styles

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ h2 {
   margin-top:10px;
   margin-bottom:15px;
 }
-.pink-text{
+/*.pink-text{
     color:blue;
-  }
+  }*/
   #orange-text{
     color:orange;
   }
@@ -147,7 +147,8 @@ h2 {
   <!--task27-->
   <!--task28-->
   <!--task29-->
-  <h1 class="pink-text blue-text" id="orange-text">Hello World!</h1>
+  <!--task30-->
+  <h1 class="pink-text blue-text" id="orange-text" style="color:white;">Hello World!</h1>
 
 
 
