--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@ h2 {
   margin-top:10px;
   margin-bottom:15px;
 }
-/*.pink-text{
-    color:blue;
-  }*/
+/*task31*/
+.pink-text{
+    color:pink !important;
+  }
   #orange-text{
     color:orange;
   }
