--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       /*task25*/
       body{
-            background-color:black;
+            background-color:#000000;
             font-family:monospace;
              color:green;
       }
